Incantion with jansson library plus partial argument handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-#cmake_minimum_required(VERSION 3.10)
-	project(dndw)
-	add_executable(dndw main.c)
-	target_link_libraries(dndw PUBLIC "-lavformat")
+project(dndw)
+add_executable(dndw main.c)
+
+target_link_libraries(dndw PUBLIC "-lavformat -larchive")
