--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(dndw)
 add_executable(dndw main.c)
 
-target_link_libraries(dndw PUBLIC "-lavformat -larchive")
+target_link_libraries(dndw PUBLIC "-lavformat -larchive -lavutil -ljansson -latomic")
